--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
   <body>
 
-saturday 1
+<a href="https://paradiseadventurevacations.com/"> </a>
+<a href="https://serengetisafaritour.com/"> </a>
 
 </body>
 </html>
